force-app/main/default/objects/BB__c/BB__c.object-meta.xml
<CustomObject>
    <label>BB</label>
    <nameField>
        <label>BB Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>