force-app/main/default/objects/BB__c/fields/AA__c.field-meta.xml
<CustomField>
    <fullName>AA__c</fullName>
    <label>AA</label>
    <referenceTo>AA__c</referenceTo>
    <relationshipLabel>BB</relationshipLabel>
    <relationshipName>BB</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>