force-app/main/default/objects/BB__c/fields/No_of_Promotions_Applied__c.field-meta.xml
<CustomField>
    <fullName>No_of_Promotions_Applied__c</fullName>
    <label>No of Promotions Applied</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>