force-app/main/default/objects/BB__c/fields/Promotions__c.field-meta.xml
<CustomField>
    <fullName>Promotions__c</fullName>
    <label>Promotion Values</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>