force-app/main/default/objects/BB__c/recordTypes/TYPE1.recordType-meta.xml
<RecordType>
    <fullName>TYPE1</fullName>
    <active>true</active>
    <label>TYPE1</label>
</RecordType>