force-app/main/default/objects/BB__c/recordTypes/TYPE2.recordType-meta.xml
<RecordType>
    <fullName>TYPE2</fullName>
    <active>true</active>
    <label>TYPE2</label>
</RecordType>